#5: Fix readability of notifications icon

--- a/public/topdesk-operator-recoloring.user.css
+++ b/public/topdesk-operator-recoloring.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Recoloring TOPdesk operator section
 @namespace      github.com/topdesk/topdesk-operator-recoloring
-@version        0.9.3
+@version        0.9.4
 @description    Override the colors of the TOPdesk operator section, for accessibility purposes. 
 @homepageURL    https://github.com/TOPdesk/operator-recoloring
 @supportURL     https://github.com/TOPdesk/operator-recoloring/issues
@@ -175,7 +175,6 @@ body.popup .divpopupcontainer .divpopupclientarea button.primary:active,
 
 /* Tab bar, and Quicklaunch buttons */
 [mstyles~="header_bar"] [guielement="icon-button"],
-button#notifications-icon,
 [handle="tas.reference.search"],
 [handle="cti_menu"],
 [handle="bookmark.overview.title"],
@@ -183,12 +182,36 @@ button#notifications-icon,
     filter: var(--on-surface-filter);
 }
 [mstyles~="header_bar"] [guielement="icon-button"]:hover,
-button#notifications-icon:hover,
 [handle="tas.reference.search"]:hover,
 [handle="cti_menu"]:hover,
 [handle="bookmark.overview.title"]:hover,
 [handle="quicklaunch_bar_buttons_area"] [mtype="group"]>[mtype="group"]>[mtype="group"][role="button"]:hover {
     filter: var(--primary-filter);
+}
+
+button#notifications-icon {
+  /* iframe is too tiny to show the normal outline */
+  outline-offset: -2px !important;
+}
+
+button#notifications-icon::before {
+  content: "";
+  background: inherit;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  filter: var(--on-surface-filter);
+}
+button#notifications-icon:hover::before {
+  filter: var(--primary-filter);
+}
+
+span#unread-notification-count {
+  background: var(--primary);
+  color: var(--on-primary);
+  border: 1px solid var(--surface);
 }
 
 /* Buttons with a background image */
