--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -138,7 +138,6 @@ body.popup .divpopupcontainer .divpopupclientarea button.primary:active,
 
 /* Tab bar, and Quicklaunch buttons */
 [mstyles~="header_bar"] [guielement="icon-button"],
-button#notifications-icon,
 [handle="tas.reference.search"],
 [handle="cti_menu"],
 [handle="bookmark.overview.title"],
@@ -146,12 +145,36 @@ button#notifications-icon,
     filter: var(--on-surface-filter);
 }
 [mstyles~="header_bar"] [guielement="icon-button"]:hover,
-button#notifications-icon:hover,
 [handle="tas.reference.search"]:hover,
 [handle="cti_menu"]:hover,
 [handle="bookmark.overview.title"]:hover,
 [handle="quicklaunch_bar_buttons_area"] [mtype="group"]>[mtype="group"]>[mtype="group"][role="button"]:hover {
     filter: var(--primary-filter);
+}
+
+button#notifications-icon {
+  /* iframe is too tiny to show the normal outline */
+  outline-offset: -2px !important;
+}
+
+button#notifications-icon::before {
+  content: "";
+  background: inherit;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  filter: var(--on-surface-filter);
+}
+button#notifications-icon:hover::before {
+  filter: var(--primary-filter);
+}
+
+span#unread-notification-count {
+  background: var(--primary);
+  color: var(--on-primary);
+  border: 1px solid var(--surface);
 }
 
 /* Buttons with a background image */
